# DiffEM

./: .gitignore  README.md  environment.yml  evaluate.py  pyproject.toml  setup.py  train.py  train_uncond.py
conf/: eval.yaml  train.yaml
conf/experiment/: celeba.yaml  cifar.yaml
experiments/celeba/: data.py  evaluate.py  train_conditional.py  train_diffem.py  train_emmmps.py  train_unconditional.py  utils.py
experiments/cifar/: .train_diffem.py.un~  data.py  evaluate.py  generate_dataset.py  train_conditional.py  train_diffem.py  train_unconditional.py  utils.py
experiments/manifold/: train_diffem.py  utils.py
priors/: common.py  diffusion.py  nn.py
